--- a/2. Intro JS/2. Ch9 (Operands)/2. Ch9.html
+++ b/2. Intro JS/2. Ch9 (Operands)/2. Ch9.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2. Ch9 (Operands) </title>
-    <link rel="stylesheet" href="Ch9.css">
+    <link rel="stylesheet" href="2. Ch9.css">
 </head>
 
 
@@ -87,7 +87,7 @@
 </div>
 
 
-    <script src="Ch9.js"></script>
+    <script src="2. Ch9.js"></script>
 </body>
 
 </html>
