--- a/2. Intro JS/2. Ch10 (Word Game)/2. Ch10.html
+++ b/2. Intro JS/2. Ch10 (Word Game)/2. Ch10.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2. Ch10 (Word Game)</title>
-    <link rel="stylesheet" href="Ch10.css">
+    <link rel="stylesheet" href="2. Ch10.css">
 </head>
 
 
@@ -38,6 +38,6 @@
 
 <div id="story"> </div>
 
-    <script src="Ch10.js"></script>
+    <script src="2. Ch10.js"></script>
 </body>
 </html>
