--- a/2. Intro JS/2. Ch11 (Arrays)/2. Ch11.html
+++ b/2. Intro JS/2. Ch11 (Arrays)/2. Ch11.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> 2. Ch11 (Arrays) </title>
-    <link rel="stylesheet" href="Ch11.css">
+    <link rel="stylesheet" href="2. Ch11.css">
 </head>
   
 
@@ -22,7 +22,7 @@
 <div id="peopleIKnow"></div>
 
 
-<script src="Ch11.js"> </script>
+<script src="2. Ch11.js"> </script>
 </body>
 
 </html>
