--- a/2. Intro JS/2. Ch3 (Data Types)/2. Ch3.html
+++ b/2. Intro JS/2. Ch3 (Data Types)/2. Ch3.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1> Chapter 3 : Giving and Receiving Data</h1>
-    <script src="Ch3.js"> </script>
+    <script src="2. Ch3.js"> </script>
 </body>
 </html>
