--- a/2. Intro JS/2. Ch6 (Robot)/2. Ch6.html
+++ b/2. Intro JS/2. Ch6 (Robot)/2. Ch6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> 2. Ch6 (Robot) </title>
-    <link rel="stylesheet" href="Ch6.css">
+    <link rel="stylesheet" href="2. Ch6.css">
 </head>
 <body>
 <u> <h1> 2. Ch6 : <br />Building a <br />Robot </h1> </u>
