--- a/2. Intro JS/2. Ch8 (Functions)/2. Ch8.html
+++ b/2. Intro JS/2. Ch8 (Functions)/2. Ch8.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book 2 Ch8</title>
-    <link rel="stylesheet" href="Ch8.css" />
+    <link rel="stylesheet" href="2. Ch8.css" />
   </head>
   <body>
     <h1>Book 2: Chapter 8 (Designing A Mini-Car)</h1>
@@ -21,6 +21,8 @@
       <div id="backwheel"></div>
     </div>
 
-    <script src="Ch8.js"></script>
+
+   
+    <script src="2. Ch8.js"></script>
   </body>
 </html>
