--- a/2. Intro JS/2. Ch10 (Word Game)/2. Ch10.html
+++ b/2. Intro JS/2. Ch10 (Word Game)/2. Ch10.html
@@ -9,8 +9,9 @@
 
 
 <body>
-    <h1> 2. Ch10 (Programming a Word Game) </h1>
+    <h1> <u>2. Ch10 (Programming a Word Game)</u> </h1>
 
+    <p> <i>Fill the below lines with words according to the instructions. Then Click "Replace it" !! </i></p>
     <div id="inputWords"> 
 
         <ul>
