--- a/2. Intro JS/2. Ch12 (Making it Functional)/2. Ch12.html
+++ b/2. Intro JS/2. Ch12 (Making it Functional)/2. Ch12.html
@@ -11,19 +11,21 @@
 <body>
 <h1> 2. Ch12 : MAKING IT FUNCTIONAL </h1>
 <hr>
-
-
+<br>
+<h4><u> Instructions</u></h4>
+<p> 1. Click on the train to make it MOVE!! </p>
+<p> 2. Click the stop button to end the journey</p>
+<br>
 <div id="container">
-    <p>
-        <ul>
-            <!-- instructions go here -->
-        </ul>
-    </p>
+ 
     <div id="track">
         <div id="train"><img src="http://www.watzthis.com/images/train.png"></div>
     </div>
     <div id="stopButton">Stop!</div>
 </div>
+
+
+<!-- instructions go here -->
 
 
 
