--- a/2. Intro JS/2. Ch16 (Martian Rescue Game)/2. Ch16.html
+++ b/2. Intro JS/2. Ch16 (Martian Rescue Game)/2. Ch16.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="2. Ch16.css">
 </head>
 
-<body>
-<h1> 2. Ch16 : Programming Adventure Game (Martian Rescue) </h1> 
-<hr>
+<body> 
+<h1> <u>2. Ch16 : Programming Adventure Game (Martian Rescue)</u></h1> 
+
 
 <div id="story"></div>
 <div id="siteFooter">
