--- a/2. Intro JS/2. Ch18 (Sandwich Bar App)/2. Ch18.html
+++ b/2. Intro JS/2. Ch18 (Sandwich Bar App)/2. Ch18.html
@@ -12,7 +12,7 @@
 <hr>
 
 
-<h1>Lunch Game!</h1>
+<h1>Lunch Time!</h1>
 
 <div id="instructions">
     <p>You get a weekly allowance of $<span id="money"></span> to buy lunch. Sandwiches are always between $1 and $5, but you never know the price until you get to school.</p>
