--- a/2. Intro JS/2. Ch19 (Lemonade-stand Program)/2. Ch19.html
+++ b/2. Intro JS/2. Ch19 (Lemonade-stand Program)/2. Ch19.html
@@ -16,17 +16,19 @@
 <br clear="all">
 <div id="orderForm">
   <div id="glasses">
-    <label>How many glasses of lemonade do you want to make this week?
+    <label>a) How many glasses of lemonade do you want to make this week?
             <br />
             <input type="number" id="numGlasses" placeholder="hint: think big!" />
         </label>
   </div>
+  <br>
   <div id="price">
-    <label>How much will you charge for a glass of lemonade this week?
-            <br />
+    <label> b) How much will you charge for a glass of lemonade this week?
+            <br>
             <input type="number" id="glassPrice" placeholder="more than .5" />
         </label>
   </div>
+  <br><br>
   <button type="button" id="OpenTheStand">Open The Stand!</button>
 </div>
 <div id="result"></div>
