--- a/2. Intro JS/2. Ch6 (Robot)/2. Ch6.html
+++ b/2. Intro JS/2. Ch6 (Robot)/2. Ch6.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="2. Ch6.css">
 </head>
 <body>
-<u> <h1> 2. Ch6 : <br />Building a <br />Robot </h1> </u>
-<hr>
+
 
 
     <div id="robot">
@@ -21,7 +20,7 @@
             <div id="mouth"></div>
         </div>
         <div class="arm" id="rightarm"></div>
-        <div id="body"><p>I &lt;3 JS!</p></div>
+        <div id="body"><p><u> <h1> 2. Ch6 : <br />Building a <br />Robot </h1> </u></p></div>
         <div class="arm" id="leftarm"></div>
         </div>
     
