--- a/Projects/Project 4 (Portfolio)/portfolio.html
+++ b/Projects/Project 4 (Portfolio)/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Bhabha's JS Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -19,6 +19,20 @@
       background-color: #f2f2f2;
       padding: 25px;
     }
+
+    #myname {
+      background-color: aquamarine;
+    }
+
+    .col-sm-3{
+      color: aquamarine;
+      border: solid;
+      
+    }
+    /* body {
+    
+    } */
+
   </style>
 </head>
 <body>
@@ -47,47 +61,60 @@
   </div>
 </nav>
 
-<div class="jumbotron">
-  <div class="container text-center">
+<div class="jumbotron" >
+  <div class="container text-center" id="myname">
     <h1>Bhabha</h1>      
     <p>Tracy Akhona September</p>
   </div>
 </div>
   
-<div class="container-fluid bg-3 text-center">    
-  <h3>JavaScript Gaming Projects</h3>
-  <div class="row">
-    <div class="col-sm-3">
-      <p>Robot Man</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3"> 
-      <p>Animated Robot Man </p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3"> 
-      <p> Word Game </p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-      <p> Wish List </p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
-    <div class="col-sm-3">
-        <p>Martian Rescue Game</p>
-        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+<div class="container-fluid bg-3 text-center" style="background-color: black">    
+  <h2 style="color:blueviolet"><u>My JavaScript Gaming Projects</u></h2>
+  <br><br>
+  <div  >
+    <div class="col-sm-3" >
+        <h4 ><u>JS Super Calculator</u></h4>
+        <img src="images/Super-Calculator.png" class="img-responsive" style="width:100%" alt="JS Super Calculator">
       </div>
-      <div class="col-sm-3">
-        <p>Weather Forecast App </p>
-        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <div class="col-sm-3" >
+        <h4 ><u>Train Animation</u></h4>
+        <img src="images/TrainAnimation.png" class="img-responsive" style="width:100%" alt="Train Animation">
       </div>
-      <div class="col-sm-3">
-        <p>Sandwich Bar App</p>
-        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+    <!-- <div class="col-sm-3">
+      <h4><u>Mr Robot Man</u></h4>
+      <img src="images/MrRobotMan.png" class="img-responsive" style="width:100%" alt="Mr Robot Man">
+    </div> -->
+    <!-- <div class="col-sm-3" > 
+      <h4><u>Animated Robot Man</u> </h4>
+      <img src="images/AnimatedRobotMan.png" class="img-responsive" style="width:100%" alt="Animated Robot Man">
+    </div> -->
+    <!-- <div class="col-sm-3"> 
+      <h4> <u> A Story Game of Words</u> </h4>
+      <img src="images/StoryWordGame.png" class="img-responsive" style="width:100%" alt="Story Word Game">
+    </div> -->
+    <!-- <div class="col-sm-3">
+      <h4> <u>Your Wish List</u> </h4>
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="A Wish List">
+    </div> -->
+    <div class="col-sm-3">
+      <h4><u>Pizzeria</u></h4>
+      <img src="images/Pizzeria.png" class="img-responsive" style="width:100%" alt="Pizzeria">
+    </div>
+    <div class="col-sm-3">
+        <h4><u>Martian Rescue Game</u></h4>
+        <img src="images/MartianRescueGame.png" class="img-responsive" style="width:100%" alt="Martian Rescue Game">
       </div>
+      <!-- <div class="col-sm-3">
+        <h4><u>Weather Forecast App</u> </h4>
+        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Weather Forecast App">
+      </div> -->
+      <!-- <div class="col-sm-3">
+        <h4><u>Sandwich Bar App</u></h4>
+        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Sandwich Bar App">
+      </div> -->
       <div class="col-sm-3">
-        <p>Lemonade-Stand Business</p>
-        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+        <h4><u>Lemonade-Stand Business</u></h4>
+        <img src="images/Lemonade Stand.png" class="img-responsive" style="width:100%" alt="Lemonade-Stand App">
       </div>
   </div>
 </div><br>
@@ -96,7 +123,7 @@
 </div><br><br>
 
 <footer class="container-fluid text-center">
-  <p>Footer Text</p>
+  <p>Orkney, North West, South Africa <br> Tel : +27 72 261 1963 <br> Email : septemberbhabha@gmail.com <br> </p>
 </footer>
 
 </body>
