--- a/2. Intro JS/2. Ch14 (If Else Statement)/2. Ch14.html
+++ b/2. Intro JS/2. Ch14 (If Else Statement)/2. Ch14.html
@@ -12,6 +12,7 @@
     <hr />
 
     <h1>JavaScript Pizzeria</h1>
+    <p> Place your order {^_^} </p>
 
     <div id="orderForm">
       <label> How many pizzas do you want?
