--- a/2. Intro JS/2. Ch13 (Wish List Program)/2. Ch13.html
+++ b/2. Intro JS/2. Ch13 (Wish List Program)/2. Ch13.html
@@ -12,22 +12,20 @@
     <hr />
 
     <div id="listPage">
-      <h1>My Wish List</h1>
 
-      <div id="formArea">
-        <label>
-          What I want:
-          <input type="text" id="iWant" />
-        </label>
-
-        <button type="button" id="addIt">Add It!</button>
-        <br /><br />
-        <button type="button" id="printable">Print Your List</button>
-      </div>
-
-        <ul id="wishList"> </ul>
+      <p> My Wish list</p>
       
-    </div>
+          <div id="formArea">
+              <label>What I want:
+                  <input type="text" id="iWant" />
+              </label>
+              <button type="button" id="addIt">Add It!</button>
+              <br>
+              <br>
+              <button type="button" id="printable">Print Your List</button>
+          </div>
+          <ul id="wishList"></ul>
+      </div>
 
     <script src="2. Ch13.js"></script>
   </body>
