--- a/2. Intro JS/2. Ch19 (Lemonade-stand Program)/2. Ch19.html
+++ b/2. Intro JS/2. Ch19 (Lemonade-stand Program)/2. Ch19.html
@@ -11,6 +11,8 @@
 <h1>  2. Ch19 : Building a lemonade stand </h1>
 <hr>
 
+<h2> Sunny day = Lemonade day ! ! {^_^} </h2>
+<br><br>
 
 <div id="5DayWeather"></div>
 <br clear="all">
