--- a/2. Intro JS/2. Ch5/2. Ch5.html
+++ b/2. Intro JS/2. Ch5/2. Ch5.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Chapter 5</title>
+    <title>Chapter 5</title>
 </head>
 <body>
-
+    
     <h1 id="shopName"> Tracy's Crotchet Hub </h1> 
     <hr> 
     <p id="shopSlogan"> <em> Handmade treasures| |Without the sweat! </em> </p>
@@ -14,13 +14,14 @@
     <h2> The Shop </h2>
     <p> Current available stock: </p>
     <ul>
-        <li id="upperBodyGarments"> Boho crop tops </li>
-        <li id="beachWear"> Beach cover ups </li>
-        <li id="accessories"> Phone pouches </li>
+        <li id="item1"> Boho crop tops </li>
+        <li id="item2"> Beach cover ups </li>
+        <li id="item3"> Phone pouches </li>
     </ul>
 
     <button id="changeList" type="button"> Click to search for more items </button>
 
-<script src="2. Ch5.js"> </script> 
+<script src="ch5.js"> </script> 
+
 </body>
 </html>
